--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "jspdf": "^3.0.4",
     "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.475.0",
-    "next": "15.3.3",
+    "next": "^15.3.6",
     "next-themes": "^0.3.0",
     "nodemailer": "^6.9.14",
     "papaparse": "^5.4.1",
